arreglo de un error de cambio de nombre

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,13 +11,13 @@
 <body class="booddy">
     <header>
         <div class="miheaderr">
-            <a href="../pages/tobi.html">
+            <a href="../pages/index.html">
                <img src="../assets/images/c51e69e6-9fe5-495b-804c-1466189c40de.jpg" alt="" width="300" height="50">
             </a>
        
             <nav>
                <ul id="paginas"> 
-                   <li><a href="../pages/tobi.html">INICIO</a></li>
+                   <li><a href="../pages/index.html">INICIO</a></li>
                    <li><a href="BIOGRAFIA.html">BIOGRAFIA</a></li>
                    <li><a href="../pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
                    <li><a href="../pages/Lyrics.html">LYRICS</a></li>
