--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOBI</title>
-    <link rel="shortcut icon" href="../assets/icons/favicon.ico">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico">
+    <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body class="booddy">
     <header>
         <div class="miheaderr">
-            <a href="../pages/index.html">
+            <a href="/index.html">
                <img src="../assets/images/c51e69e6-9fe5-495b-804c-1466189c40de.jpg" alt="" width="300" height="50">
             </a>
        
             <nav>
                <ul id="paginas"> 
-                   <li><a href="../pages/index.html">INICIO</a></li>
+                   <li><a href="/index.html">INICIO</a></li>
                    <li><a href="BIOGRAFIA.html">BIOGRAFIA</a></li>
                    <li><a href="../pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
                    <li><a href="../pages/Lyrics.html">LYRICS</a></li>
