corrigiendo los links de las paginas

--- a/pages/Time.html
+++ b/pages/Time.html
@@ -16,10 +16,10 @@
        
             <nav>
                <ul id="paginas"> 
-                   <li><a href="../index.html">INICIO</a></li>
-                   <li><a href="BIOGRAFIA.html">BIOGRAFIA</a></li>
-                   <li><a href="../pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
-                   <li><a href="../pages/Lyrics.html">LYRICS</a></li>
+                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="./biografia.html">BIOGRAFIA</a></li>
+                <li><a href="./pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
+                <li><a href="./pages/Lyrics.html">LYRICS</a></li>
                </ul>
             </nav>
            </div>
