--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -16,9 +16,9 @@
             <nav>
                <ul id="paginas"> 
                    <li><a href="../index.html">INICIO</a></li>
-                   <li><a href="BIOGRAFIA.html">BIOGRAFIA</a></li>
-                   <li><a href="../pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
-                   <li><a href="../pages/Lyrics.html">LYRICS</a></li>
+                   <li><a href="./pages/biografia.html">BIOGRAFIA</a></li>
+                   <li><a href="./pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
+                   <li><a href="./pages/Lyrics.html">LYRICS</a></li>
                </ul>
             </nav>
            </div>
