--- a/pages/Time.html
+++ b/pages/Time.html
@@ -13,15 +13,14 @@
             <a href="../index.html">
                <img src="../assets/images/c51e69e6-9fe5-495b-804c-1466189c40de.jpg" alt="" width="300" height="50">
             </a>
-       
             <nav>
-               <ul id="paginas"> 
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="./biografia.html">BIOGRAFIA</a></li>
-                <li><a href="./pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
-                <li><a href="./pages/Lyrics.html">LYRICS</a></li>
-               </ul>
-            </nav>
+                <ul id="paginas"> 
+                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="../pages/biografia.html">BIOGRAFIA</a></li>
+                    <li><a href="../pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
+                    <li><a href="../pages/Lyrics.html">LYRICS</a></li>
+                </ul>
+             </nav>
            </div>
     </header>
 
