--- a/pages/alcohol.html
+++ b/pages/alcohol.html
@@ -16,13 +16,13 @@
             </a>
        
             <nav>
-               <ul id="paginas"> 
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="./biografia.html">BIOGRAFIA</a></li>
-                <li><a href="./pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
-                <li><a href="./pages/Lyrics.html">LYRICS</a></li>
-               </ul>
-            </nav>
+                <ul id="paginas"> 
+                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="../pages/biografia.html">BIOGRAFIA</a></li>
+                    <li><a href="../pages/LANZAMIENTOS.html">LANZAMIENTOS</a></li>
+                    <li><a href="../pages/Lyrics.html">LYRICS</a></li>
+                </ul>
+             </nav>
            </div>
     </header>
 
